# emiscreen

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  emiscreen.py  emiscreen.service  install.ps1  install.sh  pyproject.toml  requirements.txt  run-emiscreen.sh
docs/: AMAZON_APPSTORE.md  API.md  ARCHITECTURE.md  DEVELOPMENT.md  FIRETV.md  MODES.md  MULTI-MONITOR.md  NAS.md  PHASE0.md  SETUP.md  WINDOWS.md
emiscreen/: __init__.py  config.py  server.py  webrtc.py
emiscreen/capture/: __init__.py  base.py  linux.py  windows.py
emiscreen/design/: Emiscreen Wireframes Standalone.html  README.md  design-tokens.json  navigation-flows.md
emiscreen/relay/: __init__.py  adb.py  input.py  windows_input.py
emiscreen/static/: viewer.css  viewer.html  viewer.js
firetv-app/: settings.gradle
firetv-app/app/: build.gradle
production/: sprint-status.yaml  stage.txt
production/sprints/: sprint-1.md
production/stories/: 1-1-auto-reconnect.md  1-10-apk-release.md  1-11-multi-client.md  1-12-amazon-appstore.md  (+9 more)
scripts/: benchmark-latency.sh  build-apk-release.ps1  build-apk-remote.ps1  build-apk-remote.sh  build-windows.ps1  connect-firetv.sh  generate-certs.sh  list-monitors.ps1  list-monitors.py  phase0-orchestrator.ps1  run-server-remote.ps1  run-server-remote.sh  setup.ps1  setup.sh  smoke-check.ps1  smoke-check.sh  start.ps1  start.sh  sync-to-server.ps1  sync-to-server.sh  trust-cert.ps1  trust-cert.sh
tests/: __init__.py  test_capture_windows.py  test_certs.py  test_config.py  test_relay_linux.py  test_relay_windows.py
(+7 files in other folders)
